fixed email and CV text on homepage

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <p>Previously I was an Assistant Professor in the <a href="http://www.phil.bilkent.edu.tr/">Department of Philosophy</a> at <a href="http://w3.bilkent.edu.tr/bilkent/">Bilkent University</a>. I received my B.S. in Physics from <a href="http://web.mit.edu/">MIT</a> in 2009 and my PhD in Philosophy from <a href="https://www.stanford.edu/">Stanford University</a> in 2018.</p>
             
             <div class="contact">
-                <p><strong>Contact:</strong> dibella [at] cmu [dot] edu</p>
-                <p><strong>CV:</strong> <a href="files/DiBella_CV.pdf">Download PDF</a></p>
+                <p><strong>Contact:</strong> my-last-name [at] cmu [dot] edu</p>
+                <p><a href="files/DiBella_CV.pdf">Download CV</a></p>
             </div>
         </div>
     </div>
