--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="files/nick dibella AI avatar.jpg" alt="Nicholas DiBella" class="profile-photo">
+        <img src="files/headshot_final.jpg" alt="Nicholas DiBella" class="profile-photo">
         <h1>Nicholas DiBella</h1>
         <nav class="nav">
             <a href="index.html" class="active">About</a>
