fixed sway hyperlinks

--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
     
     <div class="content">
         <div class="section">
-            <p>My current research focuses on <a href="sway.html">Sway</a>. With <a href="https://www.simoncullen.org">Simon Cullen</a>, I am further developing the platform and conducting empirical studies on cross-partisan discussions of divisive topics to rigorously study how to promote constructive conversations across moral and political divides.</p>
+            <p>My current research focuses on <a href="https://www.swaybeta.ai/">Sway</a>. With <a href="https://www.simoncullen.org">Simon Cullen</a>, I am further developing the platform and conducting empirical studies on cross-partisan discussions of divisive topics to rigorously study how to promote constructive conversations across moral and political divides.</p>
             
             <p>My previous work spans philosophy of probability, epistemology, philosophy of mathematics, and metaphysics.</p>
         </div>
