minor changes with journal style

--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
             
             <div class="paper">
                 <div class="paper-title"><a href="files/Cantor, Choice, and Paradox.pdf">"Cantor, Choice, and Paradox"</a></div>
-                <div class="paper-citation">2024, <em>The Philosophical Review</em>, 133(3), 223-263.</div>
+                <div class="paper-citation">2024. <em>The Philosophical Review</em>, 133(3), 223-263.</div>
                 <div class="abstract">
                     <span class="abstract-label">Abstract.</span> I propose a revision of Cantor's account of set size that understands comparisons of set size fundamentally in terms of surjections rather than injections. This revised account is equivalent to Cantor's account if the Axiom of Choice is true, but its consequences differ from those of Cantor's if the Axiom of Choice is false. I argue that the revised account is an intuitive generalization of Cantor's account, blocks paradoxes—most notably, that a set can be partitioned into a set that is bigger than it—that can arise from Cantor's account if the Axiom of Choice is false, illuminates the debate over whether the Axiom of Choice is true, is a mathematically fruitful alternative to Cantor's account, and sheds philosophical light on one of the oldest unsolved problems in set theory.
                 </div>
