--- a/finance.html
+++ b/finance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grant Calculators - Financial Decision Tools</title>
+    <title>Finance Calculators - Financial Decision Tools</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
