--- a/finance.html
+++ b/finance.html
@@ -106,7 +106,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Grant Calculators</h1>
+        <h1>Finance Calculators</h1>
         <p class="subtitle">Financial decision tools for smarter investing</p>
         
         <div class="calculator-card">
@@ -142,7 +142,6 @@
         
         <div class="footer">
             <p>Made with ❤️ for smarter financial decisions</p>
-            <p><a href="https://github.com/dibellatron/GrantCalculators" style="color: #3498db;">View on GitHub</a></p>
         </div>
     </div>
 </body>
