--- a/rent-vs-buy.html
+++ b/rent-vs-buy.html
@@ -40,6 +40,12 @@
                     <input type="number" id="homeAppreciation" value="3.0" min="0" max="20" step="0.1">
                 </div>
                 
+                <div class="input-group">
+                    <label for="closingCosts">Closing Costs (% of home price)</label>
+                    <input type="number" id="closingCosts" value="3.0" min="0" max="10" step="0.1">
+                    <small>Typical: 2-5% (loan origination, appraisal, inspection, attorney fees, etc.)</small>
+                </div>
+                
                 <h2>Homeownership Costs</h2>
                 <div class="input-group">
                     <label for="propertyTax">Annual Property Tax ($)</label>
