short-term homeownership cost problem fixed

--- a/rent-vs-buy.html
+++ b/rent-vs-buy.html
@@ -193,7 +193,8 @@
                 </div>
                 
                 <div class="chart-container">
-                    <h3>Break-Even Analysis</h3>
+                    <h3>Effective Monthly Cost Analysis</h3>
+                    <p><small>Buying costs include transaction costs (closing + selling) amortized over ownership period</small></p>
                     <canvas id="breakEvenChart"></canvas>
                 </div>
                 
