made alcohol-impact calculator

--- a/finance.html
+++ b/finance.html
@@ -124,6 +124,21 @@
             <a href="rent-vs-buy.html" class="launch-btn">Launch Calculator</a>
         </div>
         
+        <div class="calculator-card">
+            <div class="calculator-title">🍷 Alcohol Impact Calculator</div>
+            <div class="calculator-description">
+                Estimate how alcohol consumption may affect your lifespan based on scientific research
+            </div>
+            <ul class="calculator-features">
+                <li>Research-based lifespan impact calculations</li>
+                <li>Consumption level risk assessment</li>
+                <li>Years of life lost estimation</li>
+                <li>Health risk categorization</li>
+                <li>Educational health awareness tool</li>
+            </ul>
+            <a href="alcohol-impact.html" class="launch-btn">Launch Calculator</a>
+        </div>
+        
         <div class="calculator-card coming-soon">
             <div class="calculator-title">🏢 Investment Property Analyzer</div>
             <div class="calculator-description">
