fixed tax calculation, let user enter monthly investment amount

--- a/rent-vs-buy.html
+++ b/rent-vs-buy.html
@@ -147,6 +147,12 @@
                     <small>What you could earn by investing instead</small>
                 </div>
                 
+                <div class="input-group">
+                    <label for="monthlyInvestmentAmount">Monthly investment amount ($)</label>
+                    <input type="number" id="monthlyInvestmentAmount" value="500" min="0" step="50">
+                    <small>How much you would invest monthly if you chose the cheaper housing option</small>
+                </div>
+                
                 <div class="options-toggle">
                     <button type="button" class="toggle-btn" onclick="toggleOptions('additional-options')">
                         <span id="additional-toggle-text">SHOW OPTIONS</span>
